<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Manage My Pain</string>
    <string name="title_activity_home_page">Pain Records</string>

    <!-- Main activity -->
    <string name="create_account">Create Account</string>
    <string name="no_account">Don\'t have an account yet? Sign up now!</string>
    <string name="sign_in">Sign in</string>
    <string name="password_entry">Password</string>
    <string name="email_entry">Email</string>
    <string name="app_name_main_page">Manage my pain</string>

    <!-- Main page Activity -->
    <string name="title_activity_main_page">Manage my pain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Manage my pain</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_records">Pain records</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_disconnect">Disconnect</string>

    <!-- Add pain record activity + related activities -->
    <string name="title_activity_add_record">Add new Record</string>
    <string name="add_text">Please enter the information regarding your pain episode.</string>
    <string name="add_still_in_pain">Are you still in pain?</string>
    <string name="add_started_when">When did it started?</string>
    <string name="add_stopped_when">When did it stopped?</string>
    <string name="add_medicine">Did you take any medicine?</string>
    <string name="add_effective">Was it effective?</string>
    <string name="add_which_medicine">which medicine was it?</string>
    <string name="add_relieve_pain">Have you done something to try to relieve the pain?</string>
    <string name="add_what_tried">What did you try?</string>
    <string name="add_other_thing">What was it?</string>
    <string name="add_what_pain_worse">What did make your pain worse?</string>
    <string name="add_type_pain">Select the adjective(s) that best describe your pain (Multiple adjectives can be selected).</string>
    <string name="add_aching">Aching</string>
    <string name="add_throbbing">Throbbing</string>
    <string name="add_shooting">Shooting</string>
    <string name="add_Stabbing">Stabbing</string>
    <string name="add_gnawing">Gnawing</string>
    <string name="add_sharp">Sharp</string>
    <string name="add_tender">Tender</string>
    <string name="add_burning">Burning</string>
    <string name="add_exhausting">Exhausting</string>
    <string name="add_tiring">Tiring</string>
    <string name="add_penetrating">Penetrating</string>
    <string name="add_nagging">Nagging</string>
    <string name="add_numb">Numb</string>
    <string name="add_miserable">Miserable</string>
    <string name="add_unbearable">Unbearable</string>
    <string name="add_yes">yes</string>
    <string name="add_no">no</string>

    <string name="btn_date">Date</string>
    <string name="btn_time">Time</string>
    <string name="btn_next">Next</string>
    <string name="btn_end">Add record</string>

    <string name="sliders_main">State how much your pain interfered with your activities (0 being no interference and 100 being a total interference).</string>
    <string name="sliders_general_activity">General Activity</string>
    <string name="sliders_mood">Mood</string>
    <string name="sliders_walking">Walking ability</string>
    <string name="sliders_work">Normal work (housework and outside work)</string>
    <string name="sliders_social">Social relations</string>
    <string name="sliders_sleep">Sleep</string>
    <string name="sliders_life_enjoyment">Life enjoyment</string>

    <string name="max_pain_slider_text">State the level of pain you felt at <u><b>MAXIMUM</b></u> during the pain episode</string>
    <string name="min_pain_slider_text">State the level of pain you felt at <u><b>MINIMUM</b></u> during the pain episode</string>
    <string name="avg_pain_slider_text">State the level of pain you felt at <u><b>AVERAGE</b></u> during the pain episode</string>
    <string name="pain_slider_text">(0 being very low pain and 10 being unsustainable pain).</string>
    <string name="body_parts_text">Select the body parts where your pain occured during the pain episode. (You can select multiple ones).</string>

    <!-- Register Activity -->
    <string name="new_account_text">Create your new account to start managing your pain</string>
    <string name="new_email_edit">Email</string>
    <string name="new_pass_edit">Password</string>
    <string name="new_username_edit">Name</string>
    <string name="create_account_btn">Register</string>

    <!-- Statistics Activity -->
    <string name="title_activity_stat_page">Statistics</string>
    <string name="avg_pain_duration_text">Avg pain duration: </string>
    <string name="pain_freq_text">Pain episodes frequency: </string>
    <string name="avg_pain_all_time_text">Avg pain all time: </string>
    <string name="pain_levels_btn">Pain levels</string>
    <string name="pain_loc_btn">Pain location</string>
    <string name="csv_upload_btn">Get CSV file</string>
    <string name="csv_mail_btn">Get CSV file by Email</string>

    <string-array name="things_tried_array">
        <item>Walk</item>
        <item>Heat</item>
        <item>Cold</item>
        <item>Rest</item>
        <item>Stay in the dark</item>
        <item>Other</item>
    </string-array>

    <string-array name="things_worse_array">
        <item>Walking</item>
        <item>Standing</item>
        <item>Lifting</item>
        <item>Reading</item>
        <item>Other</item>
    </string-array>

    <!-- Item list for pain sliders -->
    <array name="pain_imgs_array">
        <item>@drawable/pain_0</item>
        <item>@drawable/pain_1</item>
        <item>@drawable/pain_2</item>
        <item>@drawable/pain_3</item>
        <item>@drawable/pain_4</item>
        <item>@drawable/pain_5</item>
        <item>@drawable/pain_6</item>
        <item>@drawable/pain_7</item>
        <item>@drawable/pain_8</item>
        <item>@drawable/pain_9</item>
        <item>@drawable/pain_10</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
