<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_records" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_statistics" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_disconnect"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/menu_disconnect"/>
    </group>

</menu>
