<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPainRecordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/stillInPainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/add_still_in_pain" />

            <RadioGroup
                android:id="@+id/stillPainRadioGrp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yesStillPainRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_yes" />

                <RadioButton
                    android:id="@+id/noStillPainRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_no" />

            </RadioGroup>

            <TextView
                android:id="@+id/startedWhenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_started_when" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/selectStartDateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_date" />

                <Button
                    android:id="@+id/selectStartTimeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_time" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/endDateLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/endedWhenText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_stopped_when" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/selectEndDateButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btn_date" />

                    <Button
                        android:id="@+id/selectEndTimeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btn_time" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/medicinesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_medicine" />

            <RadioGroup
                android:id="@+id/medicineRadioGrp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yesMedicineRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_yes" />

                <RadioButton
                    android:id="@+id/noMedicineRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_no" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/tookMedicineLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/medicineWorkedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_effective" />

                <RadioGroup
                    android:id="@+id/medicineEffectiveRadioGrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/yesWorkedRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_yes" />

                    <RadioButton
                        android:id="@+id/noWorkRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_no" />
                </RadioGroup>

                <EditText
                    android:id="@+id/medicineNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/add_which_medicine"
                    android:inputType="textPersonName"/>
            </LinearLayout>



            <TextView
                android:id="@+id/doneSomethingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_relieve_pain" />

            <RadioGroup
                android:id="@+id/doneSomethingRadioGrp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yesDoneSomethingRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_yes" />

                <RadioButton
                    android:id="@+id/noDoneSomethingRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_no" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/triedThingsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/whatTriedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_what_tried" />

                <Spinner
                    android:id="@+id/thingsTriedSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/OtherTriedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/add_other_thing"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/whatPainWorstText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_what_pain_worse" />

            <Spinner
                android:id="@+id/painWorstSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/otherPainWorstEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/add_other_thing"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/describePainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_type_pain" />

            <CheckBox
                android:id="@+id/achingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_aching" />

            <CheckBox
                android:id="@+id/throbbingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_throbbing" />

            <CheckBox
                android:id="@+id/shootingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_shooting" />

            <CheckBox
                android:id="@+id/stabbingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_Stabbing" />

            <CheckBox
                android:id="@+id/gnawingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_gnawing" />

            <CheckBox
                android:id="@+id/sharpCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_sharp" />

            <CheckBox
                android:id="@+id/tenderCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_tender" />

            <CheckBox
                android:id="@+id/burningCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_burning" />

            <CheckBox
                android:id="@+id/exhaustingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_exhausting" />

            <CheckBox
                android:id="@+id/tiringCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_tiring" />

            <CheckBox
                android:id="@+id/penetratingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_penetrating" />

            <CheckBox
                android:id="@+id/naggingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_nagging" />

            <CheckBox
                android:id="@+id/numbCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_numb" />

            <CheckBox
                android:id="@+id/miserableCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_miserable" />

            <CheckBox
                android:id="@+id/unbearableCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_unbearable" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_next" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>