<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSimplePainRecordActivity"
    android:orientation="vertical">

        <TextView
            android:id="@+id/stillInPainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/add_still_in_pain" />

        <RadioGroup
            android:id="@+id/stillPainRadioGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/yesStillPainRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_yes" />

            <RadioButton
                android:id="@+id/noStillPainRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_no" />

        </RadioGroup>

        <TextView
            android:id="@+id/startedWhenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_started_when" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectStartDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_date" />

            <Button
                android:id="@+id/selectStartTimeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_time" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/endedWhenText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_stopped_when" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/selectEndDateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_date" />

                <Button
                    android:id="@+id/selectEndTimeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_time" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/painSliderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/max_pain_slider_text" />

            <ImageView
                android:id="@+id/painImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/pain_0"
                android:layout_marginTop="25dp"
                android:layout_weight="1"/>

            <SeekBar
                android:id="@+id/painSeekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:max="10"
                android:progress="0"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/nextSeekerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"/>
        </LinearLayout>
</LinearLayout>