<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment-container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StatPageActivity"
    tools:showIn="@layout/app_bar_stat_page"
    android:theme="@style/AppTheme">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pain_values_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pain_levels_btn"/>

            <Button
                android:id="@+id/pain_loc_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pain_loc_btn"/>

        </LinearLayout>

        <Button
            android:id="@+id/csv_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/csv_upload_btn"/>

        <!--<Button
            android:id="@+id/csv_mail_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/csv_mail_btn"/>
-->
    </LinearLayout>

</RelativeLayout>